# 8209250603zhudaoxi

./: .gitignore  StudentProfileEditor.pro  contentarea.cpp  contentarea.h  leftpanel.cpp  leftpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  playerwidget.cpp  playerwidget.h  profileeditwidget.cpp  profileeditwidget.h  searchpage.cpp  searchpage.h  sidebar.cpp  topbar.cpp  topbar.h  模块设计说明书.md  闇€姹傝鏍艰鏄庝功.txt  需求规格说明书.md
QT学生主页前端/: StudentHomePage.pro  contentarea.cpp  contentarea.h  leftpanel.cpp  leftpanel.h  main.cpp  mainwindow.cpp  sidebar.cpp  sidebar.h
QT教师主页前端/: contentarea.cpp  contentarea.h  mainwindow.cpp  mainwindow.h  sidebar.cpp
QT教师学生管理/: .gitignore  StudentManage.pro  main.cpp  mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h  studentgrid.cpp  studentgrid.h
QT教师学生管理/client/: VideoPlayer.pro  main.cpp  mainwindow.cpp  mainwindow.h  playerwidget.h  searchpage.cpp  sidebar.cpp  sidebar.h  topbar.h
QT教师视频上传/: TeacherVideoUpload.pro  main.cpp  mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h  uploadwidget.cpp  uploadwidget.h
QT论坛前端设计/: ForumApp.pro  commentarea.cpp  commentarea.h  main.cpp  mainwindow.cpp  mainwindow.h  sidebar.cpp
QT资料上传前端/: MaterialUpload.pro  main.cpp  mainwindow.cpp  mainwindow.h  materialwidget.cpp  materialwidget.h  sidebar.cpp  sidebar.h
client/: CMakeLists.txt  main.cpp  playerwidget.cpp  resources.qrc  searchpage.h  topbar.cpp
client/auth/: signin.cpp  signin.h  signup.cpp  signup.h
client/common/: base.cpp  base.h  network_handler.cpp  network_handler.h
client/common/style/: common.qss
client/forum/: commentarea.cpp  commentarea.h  main_window.cpp  main_window.h  sidebar.cpp  sidebar.h  student_sidebar.cpp  student_sidebar.h  teacher_sidebar.cpp  teacher_sidebar.h
client/shared/material_upload/: material_upload_page.cpp  material_upload_page.h  material_widget.cpp  material_widget.h
client/shared/profile_editor/: edit_avatar.cpp  edit_avatar.h  edit_widget.cpp  edit_widget.h
client/student/home/: contentarea.cpp  contentarea.h  leftpanel.cpp  leftpanel.h  mainwindow.cpp  mainwindow.h  sidebar.cpp  sidebar.h
client/teacher/course_upload/: course_upload_page.cpp  course_upload_page.h  course_upload_widget.cpp  course_upload_widget.h
client/teacher/home/: content_area.cpp  content_area.h  left_panel.cpp  left_panel.h  main_window.cpp  main_window.h  side_bar.cpp  side_bar.h
client/teacher/student_management/: manage_page.cpp  manage_page.h  student_card.cpp  student_card.h  student_grid.cpp  student_grid.h
client/video/: mainwindow.cpp  mainwindow.h  playerwidget.cpp  playerwidget.h  searchpage.cpp  searchpage.h  searchresultpage.cpp  searchresultpage.h  topbar.cpp  topbar.h
client/video/cards/: videocard.cpp  videocard.h  videocard.qss
server/: app.py
server/database/: init.py
server/modelA/: course_upload.py  courses.py  danmaku.py  ffm_tools.py  files.py  login.py  profile.py  questions.py  register.py  resources.py  student_manage.py  user_data.py
